# legendary-memory

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  OMakefile  OMakeroot  README.md  README2.md  a.py  all.sh  b.py  chapter_1.html  check-json.sh  clean.sh  colors.md  compute-date.sh  eiffel.sh  generate_summary.sh  go.sh  go1.sh  help.md  info.json  kill.json  make-song.sh  my-latexindent.sh  mykill  print.html  run-rust.sh  run.sh  run2.sh  searchindex.js  searchindex.json  start-aws.sh  start.json  work.sh  x.sh
band-songbook/: CHANGELOG.md  Cargo.toml  Dockerfile  deploy-docker-lambda.sh  deploy-lambda.sh  todo.md
band-songbook/examples/: build_song.rs
band-songbook/src/: discover.rs  lib.rs  main.rs  main_lambda.rs  model.rs  settings.rs  storage.rs  tests.rs
band-songbook/src/chords/: bar_numbering.rs  glyph.rs  mod.rs  model.rs  parse.rs
band-songbook/src/helpers/: handlebar_helpers.rs  mod.rs
band-songbook/src/nodes/: lilypond.rs  lytex.rs  mod.rs  pdf.rs  pdfcopyfile.rs  songtikz.rs  songyml.rs  tex.rs  texoflilypond.rs
band-songbook/src/resources/lyfiles/: macros.ly
band-songbook/src/resources/texfiles/: book-setlist.tikz  chords.tex  data.tex  main-lyrics.tex  main.tex  preamble.tex  sections.tex  song.tikz
band-songbook/tests/data/: settings.yml
metapost_of_music_sheet/: dune-project
metapost_of_music_sheet/lib/: dune  emitter.ml  input_sheet.ml  input_sheet.mli  lilypond.ml  ly_code.ml  makefile.ml  ml_of_ly.sh  ml_of_mp.sh  model.ml  mp_code.ml  pdf.ml  pdf.mli  sheet.ml  sheet.mli  tex_code.ml  toto.ml  toto.mli  util.mli
metapost_of_music_sheet/lib/mpfiles/: draw_bati.mp  draw_chord.mp  draw_row.mp  flat.mp  glyph_of_chord.mp  major.mp  major_seven.mp  minor.mp  seven.mp  sharp.mp
metapost_of_music_sheet/lib/texfiles/: preamble.tex
metapost_of_music_sheet/test/: clock.sh  dune  ironic.sh  metapost_of_music_sheet.ml  test.sh  test1.ml  test2.ml
metapost_of_music_sheet/test/all_chords/: a.ly  a.tex  all_chords.sh  all_chords.yml  dune  main.tex
metapost_of_music_sheet/test/resources/: alanis-morissette-ironic.yml  music-sheet1.yml  test.yml
metapost_of_music_sheet/test/show_chords/: chord.ml  chord.tex  dune
rust/songs/: Cargo.toml  rs_of_others.sh
rust/songs/others/lyfiles/: macros.ly
rust/songs/others/mpfiles/: draw_chord.mp  draw_row.mp  sharp.mp
rust/songs/others/shfiles/: colors.sh  make_gdrive.sh  make_lytex.sh  make_pdf.sh  make_wav.sh
rust/songs/others/texfiles/: chords.tex  preamble.tex
rust/songs/src/: config.rs  emails  emitter.rs  generated.rs  main.rs  makefiles.rs
rust/songs/src/config/: config.rs  get_config_files.rs  model.rs  world.rs
rust/songs/src/emitter/: emitter.rs  xxx.rs
rust/songs/src/helpers/: helpers.rs
rust/songs/src/makefiles/: omakefile_book.rs  omakefiles.rs  omakeroot.rs
software/: Cargo.toml  Dockerfile  Dockerfile-2  Dockerfile-3  Makefile  add_missing_lyrics.sh  fromctan.sh  layout.tex  run.sh
software/fonts/: README.md  lolo.bf  lolo_flat.bf  lolo_sharp.bf  songbook.birdfont  songbook_flat.birdfont  songbook_sharp.birdfont  songbook_sus.birdfont
software/leptos/build_progress/: index.html
software/leptos/build_progress/src/: input_model.rs
software/leptos/edit_file/: Cargo.toml
software/leptos/edit_file/src/: lib.rs  main.rs
software/leptos/source_tree/: Cargo.toml  format_omake.rs  index.html
software/leptos/source_tree/src/: edit.rs  (+8 more)
software/leptos/tuto/: Cargo.toml
software/others/lyfiles/: macros.ly
software/others/makefiles/: omakefile  omakefile_book  omakeroot  root_omakefile
software/others/mpfiles/: minor.mp
software/others/shfiles/: add-missing-lyrics.sh  check-existence-of-files.sh  check-json.sh  colors.sh  compute-date.sh  delivery_script.sh  lytex_script.sh  make_gdrive.sh  make_lytex.sh  make_mpost.sh  make_pdf.sh  make_wav.sh  md5sum.sh  omake.sh  pdf_book_script.sh  pdf_song_script.sh  rkill.sh  run.sh
software/others/texfiles/: book-setlist.tikz  chords.tex  data.tex  main.tex  mainbook.tex  preamble.tex  sections.json  sections.tex  song.tikz  struct.tex  struct2.tex  tikzlibraryspline.code.tex
software/sh-helpers/: add-missing-lyrics.sh  build-wasm.sh  check-existence-of-files.sh  check-json.sh  myrebase.sh  work.sh
software/src/: errors.rs  helpers.rs  main.rs  main_cli.rs  main_client.rs  main_demo.rs  main_lambda.rs  main_normal.rs  main_server.rs  main_ui.rs  main_yamake.rs
software/src/actions/: build_lytex.rs  build_pdf.rs  build_wav.rs  graph.rs  main_loop.rs  mod.rs  mount.rs  run_bootstrap_book.rs  run_bootstrap_song.rs  run_deliver_book.rs  run_deliver_song.rs  run_fluidsynth.rs  run_lilypond_midi.rs  run_lilypond_snippet.rs  run_lualatex_book.rs  run_lualatex_song.rs  run_mountfile.rs  xxx.rs
software/src/config/: config.rs  input_model.rs  mod.rs  model.rs  world.rs
software/src/demo/: crossterm.rs  mod.rs  ui.rs
software/src/generate/: all.rs  generate.rs  handlebars_helpers.rs  mod.rs
software/src/helpers/: digest.rs  duration.rs  helpers.rs  io.rs  mod.rs  path.rs  process.rs  progress_of_string.rs
software/src/makefiles/: OMakeroot  Top_OMakefile  omakefile_book.rs  omakefile_song.rs  omakeroot.rs
software/src/model/: config.rs  get_config_files.rs  input_model.rs  mod.rs  model.rs  use_model.rs  world.rs
software/src/progress/: progress.rs
software/src/protocol/: model.rs
software/src/ui/: app.rs  crossterm.rs  mod.rs  model.rs  ui.rs
software/src/yamakegraph/: graph.rs
software/wasm/hny/: Cargo.toml
software/wasm/lsdir/: Cargo.toml
software/yew/tuto/: index.html
song_book_builder/lib/: command.ml  dune  emitter.ml  helpers.ml  input_sheet.ml  input_sheet.mli  ly_code.ml  makefile.ml  ml_of_ly.sh  ml_of_mp.sh  ml_of_sh.sh  ml_of_tex.sh  mp_code.ml  pdf.ml  pdf.mli  scan.ml  scan.mli  sh_code.ml  sheet.ml  sheet.mli  tex_code.ml  transpose.ml  util.ml
song_book_builder/lib/lyfiles/: macros.ly
song_book_builder/lib/mpfiles/: seven.mp
song_book_builder/lib/shfiles/: make_lytex.sh  make_mpost.sh  make_pdf.sh  make_wav.sh
song_book_builder/lib/texfiles/: preamble.tex
(+566 files in other folders)
