[package]
name = "band-songbook"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1"
env_logger = "0.11"
handlebars = "6"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
yamake = { path = "../../yamake" }

[dev-dependencies]
tempfile = "3"
