[package]
name = "band-songbook"
version = "0.0.1"
edition = "2024"
description = "Build system for generating PDF songbooks with chord charts and LilyPond music notation"
license = "MIT"
repository = "https://github.com/music-practice-tools/legendary-memory"
readme = "../README.md"
keywords = ["music", "songbook", "chords", "lilypond", "latex"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
argh = "0.1"
env_logger = "0.11"
handlebars = "6"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
yamake = "0.1.9"
#yamake = { path = "../../yamake" }

[dev-dependencies]
tempfile = "3"
