[package]
name = "band-songbook"
version = "0.0.4"
edition = "2024"
description = "Build system for generating PDF songbooks with chord charts and LilyPond music notation"
license = "MIT"
repository = "https://github.com/laurentcarrie/legendary-memory"
readme = "../README.md"
keywords = ["music", "songbook", "chords", "lilypond", "latex"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
argh = "0.1"
env_logger = "0.11"
handlebars = "6"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
yamake = "0.1.9"
#yamake = { path = "../../yamake" }
object_store = { version = "0.13", features = ["aws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Pin AWS SDK crates to versions compatible with Rust 1.85
aws-config = "1.5"
aws-credential-types = "1.2"
url = "2"
futures = "0.3"
tempfile = "3"

# Lambda dependencies
lambda_runtime = "0.13"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "tracing-log"] }
chrono = "0.4"

[[bin]]
name = "band-songbook"
path = "src/main.rs"

[[bin]]
name = "band-songbook-lambda"
path = "src/main_lambda.rs"

[dev-dependencies]
