[package]
name = "songbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
home = { version = "0.5.5", features = [] }
serde_json = "1.0.117"
chrono = "0.4.38"
walkdir = "2.5.0"
hex-literal = "0.4.1"
sha1 = "0.10.6"
base64ct = { version = "1.6.0", features = ["alloc"] }
sha2 = "0.10.8"
base64 = "0.22.1"
simple_logger = "5.0.0"
log = "0.4.22"
handlebars = "6.2.0"
encoding = "0.2.33"
encoding_rs = "0.8.35"
anyhow = "1.0.94"
regex = "1.11.1"
zmq = "0.10.0"
async-process = "2.3.0"
sysinfo = "0.33.1"
simple-logging = "2.0.2"
stderrlog = "0.6.0"
file-rotate = "0.7.6"
directory = "0.0.0"
backtrace = "0.3.74"


[[bin]]
name = "songbook-client"
path = "src/main_client.rs"

[[bin]]
name = "songbook-server"
path = "src/main_server.rs"
