[package]
name = "songbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]

#[features]
#default = ["crossterm"]

[dependencies]
# -- Async
tokio = { version = "1.44.2", features = ["full"] }
async-trait = "0.1"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
home = { version = "0.5.5", features = [] }
serde_json = "1.0.117"
chrono = "0.4.38"
walkdir = "2.5.0"
hex-literal = "0.4.1"
sha1 = "0.10.6"
base64ct = { version = "1.6.0", features = ["alloc"] }
sha2 = "0.10.8"
base64 = "0.22.1"
simple_logger = "5.0.0"
log = "0.4.22"
handlebars = "6.3.2"
encoding = "0.2.33"
encoding_rs = "0.8.35"
anyhow = "1.0.94"
regex = "1.11.1"
zmq = "0.10.0"
async-process = "2.3.0"
sysinfo = "0.33.1"
simple-logging = "2.0.2"
stderrlog = "0.6.0"
file-rotate = "0.7.6"
directory = "0.0.0"
backtrace = "0.3.74"
human-sort = "0.2.2"
itertools = "0.14.0"
console = "0.15.11"
indicatif = "0.17.11"
rand = "0.8"
usize_cast = "1.1.0"
bitflags = "2.9.0"
cassowary = "0.3.0"
termion = {version="4.0.5",optional=true}
crossterm = {version="0.29.0",optional=true }
argh = "0.1.13"
tui = "0.19.0"
unicode-width = "0.2.0"
unicode-segmentation = "1.12.0"
thread-id = "5.0.0"
digest = "0.10.7"
hex = "0.4.3"
rayon = "1.10.0"
tokio-rayon = "2.1.0"
futures = "0.3.31"
lambda_runtime = "0.7"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
color-print = "0.3.7"

#[[bin]]
#name = "songbook-client"
#path = "src/main_client.rs"

#[[bin]]
#name = "songbook-server"
#path = "src/main_server.rs"

#[[bin]]
#name = "songbook-ui"
#path = "src/main_ui.rs"
#required-features = ["crossterm"]

[[bin]]
name = "songbook-lambda"
path = "src/main_lambda.rs"

[[bin]]
name = "songbook-normal"
path = "src/main_normal.rs"




[dev-dependencies]
#rand="0.8"
argh="0.1"
