[package]
name = "songs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
home = { version = "0.5.5", features = [] }
serde_json = "1.0.117"
chrono = "0.4.38"
walkdir = "2.5.0"
hex-literal = "0.4.1"
sha1 = "0.10.6"
base64ct = { version = "1.6.0", features = ["alloc"] }
sha2 = "0.10.8"
base64 = "0.22.1"
simple_logger = "5.0.0"
log = "0.4.22"
