[package]
name = "dsci-hny-wasm-hny"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
#repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
#dsci-utils = { version="2024.2.27"}
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.68"
plotly = { version = "0.8.4", features = ["wasm"] }
wasm-bindgen = "0.2"
