[package]
name = "song-lsdir"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
description = "lsdir"
license = "MIT/Apache-2.0"
#repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
handlebars = "6.3.0"
#dsci-utils = { version="2024.2.27"}
js-sys = "0.3.68"
wasm-bindgen = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.117"
reqwest = "0.12.12"
wasm-bindgen-futures = "0.4.50"
